test/error/default_nettype_invalid.sv
`default_nettype invalid
module top;
    assign foo = 0;
endmodule
